a couple more small tweaks

--- a/app/views/shared/_loans_requests_mine.html.erb
+++ b/app/views/shared/_loans_requests_mine.html.erb
@@ -45,7 +45,7 @@
               <% if loan.status == "rejected" %>
                 <div class="label label-danger btn-half-width" type="submit">Rejected</div>
               <% elsif loan.status == "given" %>
-                <div class="label label-success btn-half-width" type="submit">Given</div>
+                <div class="label label-success btn-half-width" type="submit">Received</div>
               <% end %>
             </div>
 
