--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -59,6 +59,8 @@
   justify-content: flex-end;
   margin: 0;
   padding: 0;
+  padding-top: 10px;
+  padding-right: 20px;
   // font-size: 10px;
   // margin: 20px;
 }
