--- a/app/assets/stylesheets/components/_simpleform.scss
+++ b/app/assets/stylesheets/components/_simpleform.scss
@@ -1,18 +1,30 @@
+.form-edit{
+    margin-top: 30px;
+}
+
 .simple_form {
   div.input {
     margin-bottom: 10px;
     clear: both;
     /* Required for Webkit, but not for Gecko */
   }
+  div.submit {
+
+
+
+  }
   label {
-    float: left;
-    width: 100px;
-    text-align: right;
-    margin: 2px 10px;
+    // float: left;
+    width: 270px;
+    text-align: left;
+    margin: 2px 5px;
+    font-weight: lighter;
   }
 }
 
 div.boolean, .simple_form input[type='submit'] {
-  margin-left: 120px;
+  margin-top: 50px;
+  text-align: center;
+
 }
 
