--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,9 +7,9 @@
     <!-- BOOK -->
     <div class="book">
       <div class="book-cover">
-        <h1 class="title"><%= @book.title %></h1>
+        <h1 class="title"><%= @book.title[0..100] %></h1>
         <!--     <h2 class="subtitle">this is the Book Subitle</h2> -->
-        <h5 class="author"><span> écrit par</span> <%= @book.author %> </h5>
+        <h5 class="author"><span> written by </span> <%= @book.author %> </h5>
       </div>
       <div class="book-top"></div>
       <div class="book-right"></div>
@@ -34,7 +34,6 @@ Following appears if current user is different from Book owner
 
       <% profile_image_path = @book.user.profile.profile_picture %>
       <%= image_tag profile_image_path %>
-      <img =@book.user.profile.profile_picture class="product-image">
       <div class='product-body'>
         <h3><%= @book.user.profile.first_name %> can lend it to you!</h3>
       </div>
