library pages changed to card layout

--- a/app/assets/stylesheets/components/_card_user.scss
+++ b/app/assets/stylesheets/components/_card_user.scss
@@ -138,3 +138,12 @@
   justify-content: center;
 
 }
+
+@media (min-width: 768px) {
+  .product-button-holder {
+
+  justify-content: flex-start;
+
+  }
+
+}
