--- a/app/views/shared/_loans_shared.html.erb
+++ b/app/views/shared/_loans_shared.html.erb
@@ -1,27 +1,40 @@
 <h4>Shared books</h4>
+
 <% if @shared.count == 0 %>
-<p>You don't have any shared books right now!</p>
+  <p>You don't have any shared books right now!</p>
 <% else %>
 
-<% @shared.each do |loan| %>
-<div class="row-bordered-top list-row-library">
-  <div class="row">
+  <div class="add-margin-top">
+    <div class="container is-small">
 
-    <%= render partial: "shared/loan_card", object: loan, as: :loan,
-    locals: {
-      owner_pic: false
-    } %>
+    <div class="row">
+      <% @shared.each do |loan| %>
 
+      <div class="col-xs-12">
 
-    <div class="col-xs-12 col-md-4">
-      <div class="flex-container-centered-vh list-row-130">
-        <%= link_to "Mark Returned", return_book_path(loan), {class: "btn btn-primary btn-half-width", :method => :patch} %>
+        <div class="product-with-buttons-box">
+          <div class="product no-border-bottom">
+            <%= image_tag loan.user.profile.profile_picture, class: "product-image" %>
+            <div class='product-body '>
+              <% language = " - #{loan.book.language}" unless loan.book.language.empty? %>
+              <h3><%= loan.user.profile.first_name %> has <em><%= loan.book.title %></em>!</h3>
+              <p>by <%= loan.book.author %> <%= language %></p>
+              <p><%= loan.status.capitalize %>: <%= loan.last_action.strftime('%d/%m/%Y') %></p>
+            </div>
+          </div>
+
+          <div class="product-button-holder">
+            <%= link_to "Mark Returned", return_book_path(loan), {class: "btn btn-primary btn-half-width", :method => :patch} %>
+          </div>
+        </div>
+
       </div>
+
+      <% end %>
     </div>
 
+    </div>
   </div>
-</div>
-<% end %>
 
 <% end %>
 
