--- a/app/views/shared/_loans_requests_mine.html.erb
+++ b/app/views/shared/_loans_requests_mine.html.erb
@@ -29,11 +29,11 @@
                 <% language = " - #{loan.book.language}" unless loan.book.language.empty? %>
 
                 <% if loan.status == "given" %>
-                  <h3><%= loan.book.user.profile.first_name %> gave you <em><%= loan.book.title %></em>!</h3>
+                  <h3><%= loan.book.user.profile.first_name %> gave you <em><%= loan.book.title[0..60] %></em>!</h3>
                 <% elsif loan.status == "rejected" %>
                   <h3><%= loan.book.user.profile.first_name %> rejected your request for <em><%= loan.book.title %></em>!</h3>
                 <% else %>
-                  <h3>You requested <em><%= loan.book.title %></em> from <%= loan.book.user.profile.first_name %>!</h3>
+                  <h3>You requested <em><%= loan.book.title[0..60] %></em> from <%= loan.book.user.profile.first_name %>!</h3>
                 <% end %>
 
                 <p>by <%= loan.book.author %> <%= language %></p>
