--- a/app/views/books/search.html.erb
+++ b/app/views/books/search.html.erb
@@ -13,7 +13,7 @@
           <% profile_image_path = book.user.profile.profile_picture %>
           <%= image_tag profile_image_path %>
           <div class='product-body'>
-            <h3><%= book.user.profile.first_name %> can lend you <em><%= book.title %></em> </h3>
+            <h3><%= book.user.profile.first_name %> can lend you <em><%= book.title[0..60] %></em> </h3>
             <p>de <%= book.author %> - <%= book.language %></p>
           </div>
         </div>
