--- a/app/views/shared/_loan_card.html.erb
+++ b/app/views/shared/_loan_card.html.erb
@@ -13,7 +13,7 @@
 <div class="col-xs-9 col-md-6">
   <div class="flex-container-centered-v list-row-130">
     <div>
-      <strong><%= loan.book.title %></strong> (<%= loan.book.language %>)
+      <strong><%= loan.book.title[0..60] %></strong> (<%= loan.book.language %>)
       <em><%= loan.book.author %></em>
 
       <div class="padded-top-2em">
