--- a/app/views/shared/_loans_returned.html.erb
+++ b/app/views/shared/_loans_returned.html.erb
@@ -23,7 +23,7 @@
               <div class='product-body '>
                 <% language = " - #{loan.book.language}" unless loan.book.language.empty? %>
 
-                <h3><%= loan.user.profile.first_name %> returned <em><%= loan.book.title %></em>!</h3>
+                <h3><%= loan.user.profile.first_name %> returned <em><%= loan.book.title[0..60] %></em>!</h3>
                 <p>by <%= loan.book.author %> <%= language %></p>
                 <p><%= loan.status.capitalize %>: <%= loan.last_action.strftime('%d/%m/%Y') %></p>
               </div>
