little changes on form

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -37,6 +37,8 @@ padding: 0px 50px;
 .sign-in-expl{
   padding-top: 70px;
   padding-bottom: 55px;
+  padding-left: 15px;
+  padding-right: 15px;
   background-color: $primary;
 
   h1{
