--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -54,7 +54,7 @@
     <h1>
     Sign up with Facebook and start sharing your books!
       <div class="home-button">
-        <%= link_to user_omniauth_authorize_path(:facebook), class: "navbar-wagon-item navbar-wagon-link" do %>
+        <%= link_to user_omniauth_authorize_path(:facebook), class: "navbar-wagon-link" do %>
           <div class="btn btn-primary btn-lg btn-login">Login with Facebook</div>
         <% end %>
       </div>
