--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,7 +5,7 @@ PowOSh
 <div class="wrapper-content">
 
   <div class="container add-margin-top text-center">
-    <h3>Look who can make you happy!</h3>
+    <h3>Latest additions!</h3>
   </div>
 
   <div class="add-margin-top">
