--- a/app/views/shared/_my_library.html.erb
+++ b/app/views/shared/_my_library.html.erb
@@ -25,7 +25,8 @@ located in the bar at the top of the screen.</p>
             <%= image_tag book_image_path, class: "product-image" %>
             <div class='product-body '>
               <% language = " - #{book.language}" unless book.language.empty? %>
-              <h3><em><%= book.title[0..60] %></em></h3>
+              <% title = book.title.length > 60 ? "#{book.title[0..60]}..." : book.title %>
+              <h3><em><%= title %></em></h3>
               <p>by <%= book.author %> <%= language %></p>
             </div>
           </div>
