--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -20,7 +20,8 @@ PowOSh
             <% profile_image_path = book.user.profile.profile_picture %>
             <%= image_tag profile_image_path %>
             <div class='product-body'>
-              <h3><%= book.user.profile.first_name %> made <em><%= book.title[0..50] %></em> available!</h3>
+              <% title = book.title.length > 50 ? "#{book.title[0..50]}..." : book.title %>
+              <h3><%= book.user.profile.first_name %> made <em><%= title %></em> available!</h3>
               <p>by <%= book.author %> - <%= book.language %></p>
             </div>
           </div>
