--- a/app/views/shared/_loans_borrowed.html.erb
+++ b/app/views/shared/_loans_borrowed.html.erb
@@ -16,7 +16,8 @@
             <%= image_tag loan.book.user.profile.profile_picture, class: "product-image" %>
             <div class='product-body '>
               <% language = " - #{loan.book.language}" unless loan.book.language.empty? %>
-              <h3>You borrowed <em><%= loan.book.title %></em> from <%= loan.book.user.profile.first_name %>!</h3>
+              <% title = loan.book.title.length > 60 ? "#{loan.book.title[0..60]}..." : loan.book.title %>
+              <h3>You borrowed <em><%= title %></em> from <%= loan.book.user.profile.first_name %>!</h3>
               <p>by <%= loan.book.author %> <%= language %></p>
               <p><%= loan.status.capitalize %>: <%= loan.last_action.strftime('%d/%m/%Y') %></p>
             </div>
