--- a/app/assets/stylesheets/components/_card_user.scss
+++ b/app/assets/stylesheets/components/_card_user.scss
@@ -6,6 +6,10 @@
   max-width: 700px;
 }
 
+.card-image-edit{
+
+}
+
 .product {
   display: flex;
   align-items: center;
@@ -65,6 +69,7 @@
   height: 65px;
   margin-right: 20px;
   border-radius: 2px;
+  flex: 0 0 65px;
 
 }
 
