--- a/app/views/shared/_loans_shared.html.erb
+++ b/app/views/shared/_loans_shared.html.erb
@@ -19,7 +19,7 @@
             <div class='product-body '>
               <% language = " - #{loan.book.language}" unless loan.book.language.empty? %>
               <% title = loan.book.title.length > 60 ? "#{loan.book.title[0..60]}..." : loan.book.title %>
-              <% name = loan.borrower_name_manual.nil? ? loan.user.profile.first_name : loan.borrower_name_manual %>
+              <% name = loan.borrower_name_manual.empty? ? loan.user.profile.first_name : loan.borrower_name_manual %>
               <h3><%= name %> has <em><%= title %></em>!</h3>
               <p>by <%= loan.book.author %> <%= language %></p>
               <p><%= loan.status.capitalize %>: <%= loan.last_action.strftime('%d/%m/%Y') %></p>
