--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -2,6 +2,7 @@
   width: 40%;
   margin: 10px;
   font-size: 9px;
+   background-color: $primary;
   // max-width: 220px
 }
 
@@ -73,3 +74,5 @@
   }
 
 }
+
+
