--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -33,7 +33,7 @@ $base-height: 1.4;
  * Colors
  * ------------------------------------- */
 // Scheme
-$brand-color: #BD451F;
+$brand-color: #E64A19;
 $primary:#E64A19;
 $primary-white: #FBFEF9;
 $primary-black: #1F1300;
