--- a/app/assets/stylesheets/pages/_show_book.scss
+++ b/app/assets/stylesheets/pages/_show_book.scss
@@ -1,3 +1,24 @@
+.book-description {
+  padding: 30px 15px 0px 15px;
+  em {
+    font-size: 19px;
+    font-family: dancing-script;
+  }
+}
+
+.firstname{
+  text-align: end;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  font-family: dancing-script;
+  font-size: 16px;
+  opacity: 0.7;
+}
+
+.show-background {
+  background-color: $primary-white;
+}
+
 .comments1 p {
   font-size: 10px;
 }
