--- a/app/views/shared/_loans_requests_friends.html.erb
+++ b/app/views/shared/_loans_requests_friends.html.erb
@@ -25,8 +25,8 @@
           </div>
 
           <div class="product-button-holder">
-            <%= link_to "Mark as Given", lend_book_path(loan), {class: "btn btn-primary btn-half-width", :method => :patch} %>
-            <%= link_to "Reject Loan", reject_loan_path(loan), {class: "btn btn-default btn-half-width", :method => :patch} %>
+            <%= link_to "Mark as Given", lend_book_path(loan), {class: "btn btn-primary btn-half-width ", :method => :patch} %>
+            <%= link_to "Reject Loan", reject_loan_path(loan), {class: "btn btn-default btn-half-width color-forced", :method => :patch} %>
           </div>
         </div>
 
