Friendship working so you only see your friends books

--- a/app/views/loans/new.html.erb
+++ b/app/views/loans/new.html.erb
@@ -9,7 +9,7 @@
          <%= simple_form_for(@loan, { url: book_loans_path(@book) } ) do |f| %>
           <p>Choose a friend using the app.</p>
           <!-- The label method used below is in the user model -->
-          <%= f.input :user_id, label: "Lend to:", collection: current_user.all_friends, label_method: :profile_first_name, prompt: "Select friend"%>
+          <%= f.input :user_id, label: "Lend to:", collection: current_user.friends, label_method: :profile_first_name, prompt: "Select friend"%>
           <p>OR</p>
           <p>Lend to a friend not using the app.</p>
           <%= f.input :borrower_name_manual, label: "Friend's name:" %>
